modified the gitignore added Design Ballon-mousse in the report

--- a/Rapport/Rapport APP2.tex
+++ b/Rapport/Rapport APP2.tex
@@ -2,11 +2,12 @@
 \usepackage[margin=3.0cm]{geometry}
 \usepackage[french, english]{babel}
 \usepackage[utf8]{inputenc}
+\usepackage{hyperref}
 \usepackage{amsmath}
 \usepackage{setspace}
 
 \begin{document}
-\begin{titlepage}   
+\begin{titlepage} 
 	\large
 	{
 		\begin{center}
@@ -25,30 +26,54 @@
 		\end{center}
 	}
 \end{titlepage}
-
 \tableofcontents
 \newpage
 \onehalfspacing
-\section{introduction}
+\section{Introduction}
 Principes de dynamique et méthodes numériques
 Dans le cadre du cour \textit{Principes de dynamique et méthodes numériques}, le mandat remit à la présente équipe était de rendre l'initiation des étudiants de la faculté de génie plus passionnante a l'aide d'un parcours à obstacles de style \textit{Wipe-out}.
 
 \section{Design de la glissade}
-\subsection{Calcul}
+\subsection{Calculs}
 
 \section{Design du débit d'eau}
-\subsection{Calcul}
+\subsection{Calculs}
 
 \section{Design du Ballon-mousse}
-\subsection{Calcul}
+\subsection{Ballon Attrapé}
+Dans cette situation, on présume que le participant attrape le ballon-mousse. Donc, on peut assumer alors qu'il y a une fusion du ballon-mousse et le participant après l'impacte en ceux-ci? Donc cela se résume à l'équation suivante:
+\begin{equation}
+m_p*v_p + m_b*v_b = (m_p + m_b)*v_{pb}
+\end{equation}
+En isolant $v_{pb}$, on obtien un valeur de :
+\begin{equation}
+v_{pb} = 5.59m/s
+\end{equation}
+À l'aide de cette vitesse, on doit règler la minutrie en sorte à ce que le participant ait quitté la plateform au complet avant que celle-ci s'ouvre.
+\begin{equation}
+\delta t_m = \frac{l_{trappe}}{v_{pb}}
+\end{equation}
+\begin{equation}
+\delta t_m = \frac{3m}{5.59m/s} \approx{0.54}
+\end{equation}
+Et selon les standard imposés, la minutrie devait avoir une marge de manoeuvre de $0,02s$.
+\begin{equation}
+\delta t_m \approx{0.54 - 0.02} = 0.52sec
+\end{equation}
+\subsection{Ballon non attrapé}
+Dans cette situation, le participant entre en collision avec le ballon sans l'attrapé. La collision entre le ballon-mousse et le participant à ce moment là.
+
 
 \section{Design de la minuterie}
-\subsection{Calcul}
+\subsection{Calculs}
 
 \section{Design du Coussin-Tampoline}
-\subsection{Calcul}
+\subsection{Calculs}
 
 \section{Design du Bassin}
-\subsection{Calcul}
+\subsection{Calculs}
+
+\section{Conclusion}
+
 
 \end{document}
