Added Ballon-mousse equations

--- a/Rapport/Rapport APP2.tex
+++ b/Rapport/Rapport APP2.tex
@@ -47,22 +47,28 @@ m_p*v_p + m_b*v_b = (m_p + m_b)*v_{pb}
 \end{equation}
 En isolant $v_{pb}$, on obtien un valeur de :
 \begin{equation}
-v_{pb} = 5.59m/s
+v_{pb} = 5,59m/s
 \end{equation}
 À l'aide de cette vitesse, on doit règler la minutrie en sorte à ce que le participant ait quitté la plateform au complet avant que celle-ci s'ouvre.
 \begin{equation}
 \delta t_m = \frac{l_{trappe}}{v_{pb}}
 \end{equation}
 \begin{equation}
-\delta t_m = \frac{3m}{5.59m/s} \approx{0.54}
+\delta t_m = \frac{3m}{5,59m/s} \approx{0,54}
 \end{equation}
 Et selon les standard imposés, la minutrie devait avoir une marge de manoeuvre de $0,02s$.
 \begin{equation}
-\delta t_m \approx{0.54 - 0.02} = 0.52sec
+\delta t_m \approx{0,54 - 0,02} = 0,52sec
 \end{equation}
 \subsection{Ballon non attrapé}
-Dans cette situation, le participant entre en collision avec le ballon sans l'attrapé. La collision entre le ballon-mousse et le participant à ce moment là.
-
+Dans cette situation, le participant entre en collision avec le ballon sans l'attrapé. La collision entre le ballon-mousse et le participant à ce moment là est une collision plastique. Selon les requis du devis de WOQ, nous considérons le coefficient de récupération de $0,8$.
+\begin{equation}
+e <= 0,8 = \frac{V'_{b_n} - V'_{p_n}}{V_{p_n} - V_{b_n}}
+\end{equation}
+suite a des manipulations algébrique, le résultat est:
+\begin{equation}
+{V_{p_n} - V_{b_n}} = 
+\end{equation}
 
 \section{Design de la minuterie}
 \subsection{Calculs}
