Added Bassin calcul

--- a/Rapport/Rapport APP2.tex
+++ b/Rapport/Rapport APP2.tex
@@ -2,9 +2,9 @@
 \usepackage[margin=3.0cm]{geometry}
 \usepackage[french, english]{babel}
 \usepackage[utf8]{inputenc}
-\usepackage{hyperref}
+%\usepackage{hyperref}
 \usepackage{amsmath}
-\usepackage{setspace}
+%\usepackage{setspace}
 
 \begin{document}
 \begin{titlepage} 
@@ -28,7 +28,7 @@
 \end{titlepage}
 \tableofcontents
 \newpage
-\onehalfspacing
+%\onehalfspacing
 \section{Introduction}
 Principes de dynamique et méthodes numériques
 Dans le cadre du cour \textit{Principes de dynamique et méthodes numériques}, le mandat remit à la présente équipe était de rendre l'initiation des étudiants de la faculté de génie plus passionnante a l'aide d'un parcours à obstacles de style \textit{Wipe-out}.
