--- a/Rapport/Rapport APP2.tex
+++ b/Rapport/Rapport APP2.tex
@@ -2,9 +2,11 @@
 \usepackage[margin=3.0cm]{geometry}
 \usepackage[french, english]{babel}
 \usepackage[utf8]{inputenc}
+\usepackage{graphicx}
 %\usepackage{hyperref}
 \usepackage{amsmath}
 %\usepackage{setspace}
+\graphicspath{Images/}
 
 \begin{document}
 \begin{titlepage} 
@@ -34,6 +36,10 @@ Principes de dynamique et méthodes numériques
 Dans le cadre du cour \textit{Principes de dynamique et méthodes numériques}, le mandat remit à la présente équipe était de rendre l'initiation des étudiants de la faculté de génie plus passionnante a l'aide d'un parcours à obstacles de style \textit{Wipe-out}.
 
 \section{Design de la glissade}
+Le devis émit par le WOQ demandais de calculer la trajectoire d'un glissade passant absolument pas des points cartésiens précis. Comme le montre la tableau 1, la glissade doit passer par tout les points.
+
+\includegraphics[scale=1]{tableau1}
+
 \subsection{Calculs}
 
 \section{Design du débit d'eau}
