--- a/Rapport/Rapport APP2.tex
+++ b/Rapport/Rapport APP2.tex
@@ -5,7 +5,6 @@
 \usepackage{graphicx}
 \usepackage[hidelinks]{hyperref}
 \usepackage{amsmath}
-\usepackage{setspace}
 \graphicspath{{Images/}
 \geometry{legalpaper}}
 
@@ -31,20 +30,30 @@
 \end{titlepage}
 \tableofcontents
 \newpage
-%\onehalfspacing
 \section{Introduction}
 Principes de dynamique et méthodes numériques
 Dans le cadre du cour \textit{Principes de dynamique et méthodes numériques}, le mandat remit à la présente équipe était de rendre l'initiation des étudiants de la faculté de génie plus passionnante a l'aide d'un parcours à obstacles de style \textit{Wipe-out}.
 
 \section{Design de la glissade}
-Le devis émit par le WOQ demandais de calculer la trajectoire d'un glissade passant absolument pas des points cartésiens précis. Comme le montre la tableau 1, la glissade doit passer par tout les points.
+Le devis émit par le WOQ demandais de calculer la trajectoire d'un glissade passant absolument par des points cartésiens précis. Comme le montre la tableau 1, la glissade doit passer par tout les points.
 
 \begin{center}
 	\includegraphics[scale=0.8]{tableau1}
 \end{center}
-Les valeurs de ce tableau sont les points de référence pour le approximation de la courbe de la glissade.
-
+Les valeurs de ce tableau sont les points de référence pour le approximation de la courbe de la glissade. Il faut approximer une courbe qui passe par tous les points. Ensuite, il faut trouver la bonne courbe en évaluant toutes les courbes possibles des points $E_y$. Les valeurs possibles du points $E_y$ vont de 10 à 15. Les coordonnées horizontales$(m)$ sont exprimés par la suite $X_k$ et les coordonnées verticales$(m)$ sont exprimées par la suite $Y_k$. 
 \subsection{Calculs}
+Il y a 5 termes par suites mentionnés précédemment. Le devis demander d'interpoler les valeurs des coordonnées. L'interpolation veut dire que notre nombre de termes dans les suites, soit M, est égale au nombre de termes du polynôme, soit $N=M$. En utilisant l'appoximation linéaire, on obtien un polynome d'ordre 4 (l'ordre est $N-1$). Le polynôme obtenu suite a l'interpolation est: 
+\begin{equation}
+g(x) = A(1) + A(2)\times x + A(3)\times x^2 + A(4)\times x^3 + A(5)\times x^4 
+\end{equation}
+Ou $A$ est le vecteur des coefficient des polynômes obtenu par la méthode de la projection orthogonale avec la pseudo-inverse. 
+\newpage
+\noindent
+Une fois les polynômes trouver ($E_y$ allant de 10 à 15 par bon de 0,01), il faut choisir une des courbe qui assure la sécurité des participants. Le devis mention que: "La valeur de yf doit assurer une sortie de glissade à peu près horizontale (exigence qualitative) pour assurer une transition naturelle avec la surface horizontale de la trappe." On peut alors dire qu'il faut que la dérivé du polynôme soit le plus près de 0. 
+\begin{equation}
+\frac{dg(x)}{dx} = 0
+\end{equation}
+L'estimation a été accomplie avec le logiciel de calcul Matlab et le résultat obtenu est que la valeur de $E_y = 12.27m$. 
 
 \section{Design du débit d'eau}
 \subsection{Calculs}
@@ -53,7 +62,7 @@ Les valeurs de ce tableau sont les points de référence pour le approximation d
 \subsection{Ballon Attrapé}
 Dans cette situation, on présume que le participant attrape le ballon-mousse. Donc, on peut assumer alors qu'il y a une fusion du ballon-mousse et le participant après l'impacte en ceux-ci? Donc cela se résume à l'équation suivante:
 \begin{equation}
-m_p*v_p + m_b*v_b = (m_p + m_b)*v_{pb}
+m_p\times v_p + m_b\times v_b = (m_p + m_b)\times v_{pb}
 \end{equation}
 En isolant $v_{pb}$, on obtien un valeur de :
 \begin{equation}
@@ -84,7 +93,7 @@ V_b' = 5,8 + V_p'
 \end{equation}
 Il y a aussi l'équation suivante:
 \begin{equation}
-m_p.V_p + m_b.V_b = m_p.V_p' + m_b.V_b'
+m_p\times V_p + m_b\times V_b = m_p\times V_p' + m_b\times V_b'
 \end{equation}
 \noindent
 en substituant l'équation trouvé précédement, on obtien:
