--- a/Rapport/Rapport APP2.tex
+++ b/Rapport/Rapport APP2.tex
@@ -3,7 +3,7 @@
 \usepackage[french, english]{babel}
 \usepackage[utf8]{inputenc}
 \usepackage{graphicx}
-%\usepackage[hidelinks]{hyperref}
+\usepackage[hidelinks]{hyperref}
 \usepackage{amsmath}
 \graphicspath{{Images/}
 \geometry{legalpaper}}
@@ -35,10 +35,10 @@ Principes de dynamique et méthodes numériques
 Dans le cadre du cour \textit{Principes de dynamique et méthodes numériques}, le mandat remit à la présente équipe était de rendre l'initiation des étudiants de la faculté de génie plus passionnante a l'aide d'un parcours à obstacles de style \textit{Wipe-out}.
 
 \section{Design de la glissade}
-Le devis émit par le WOQ demandais de calculer la trajectoire d'un glissade passant absolument par des points cartésiens précis. Comme le montre la tableau 1, la glissade doit passer par tout les points.
+Le devis émit par le WOQ demandais de calculer la trajectoire d'un glissade passant absolument par des points cartésiens précis. Comme le montre la tableau $1$, la glissade doit passer par tout les points.
 
 \begin{center}
-	\includegraphics[scale=0.8]{tableau1}
+	\includegraphics[width=\textwidth]{tableau1}
 \end{center}
 Les valeurs de ce tableau sont les points de référence pour le approximation de la courbe de la glissade. Il faut approximer une courbe qui passe par tous les points. Ensuite, il faut trouver la bonne courbe en évaluant toutes les courbes possibles des points $E_y$. Les valeurs possibles du points $E_y$ vont de 10 à 15. Les coordonnées horizontales$(m)$ sont exprimés par la suite $X_k$ et les coordonnées verticales$(m)$ sont exprimées par la suite $Y_k$. 
 \subsection{Calculs}
