remove merge conflic in rapport

--- a/Rapport/Rapport APP2.tex
+++ b/Rapport/Rapport APP2.tex
@@ -5,10 +5,7 @@
 \usepackage{graphicx}
 \usepackage[hidelinks]{hyperref}
 \usepackage{amsmath}
-<<<<<<< HEAD
-%\usepackage{setspace}
-=======
->>>>>>> 533b4bf26b7053984ab5221273aa8f2b38d96354
+
 \graphicspath{{Images/}
 \geometry{legalpaper}}
 
@@ -50,7 +47,7 @@ Il y a 5 termes par suites mentionnés précédemment. Le devis demander d'inter
 \begin{equation}
 g(x) = A(1) + A(2)\times x + A(3)\times x^2 + A(4)\times x^3 + A(5)\times x^4 
 \end{equation}
-Ou $A$ est le vecteur des coefficient des polynômes obtenu par la méthode de la projection orthogonale avec la pseudo-inverse. 
+Où $A$ est le vecteur des coefficient des polynômes obtenu par la méthode de la projection orthogonale avec la pseudo-inverse. 
 \newpage
 \noindent
 Une fois les polynômes trouver ($E_y$ allant de 10 à 15 par bon de 0,01), il faut choisir une des courbe qui assure la sécurité des participants. Le devis mention que: "La valeur de yf doit assurer une sortie de glissade à peu près horizontale (exigence qualitative) pour assurer une transition naturelle avec la surface horizontale de la trappe." On peut alors dire qu'il faut que la dérivé du polynôme soit le plus près de 0. 
